Add fully connected neural network trainining

--- a/Week02/TextAnalysis_01.ipynb
+++ b/Week02/TextAnalysis_01.ipynb
@@ -7,7 +7,9 @@
       "collapsed_sections": [
         "_o7mWgStU39h",
         "KOA6oaouXrxd",
-        "WAkX_hBBYNpt"
+        "WAkX_hBBYNpt",
+        "I7TfqsRwv83G",
+        "_H9Lfjsp19q8"
       ],
       "gpuType": "T4"
     },
@@ -23,7 +25,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -62,7 +64,7 @@
       "metadata": {
         "id": "Yhe45jApUGcQ"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +76,7 @@
       "metadata": {
         "id": "PXQopw9ZUj53"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,7 +92,7 @@
         "id": "X8PidhuKUuly",
         "outputId": "dbd0f2b3-9fa5-48d1-dd8f-b1dc3d2ba1c4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +121,7 @@
         "id": "HFnZJv59U1-h",
         "outputId": "b8b268d7-8ef9-49d6-c183-6dc355af6738"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -381,7 +383,7 @@
         "id": "Fj_TCGYIU2nY",
         "outputId": "a5198110-7b7e-4e9f-e323-d5920b54fcff"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +621,7 @@
         "id": "cQB3jcHnXV7z",
         "outputId": "8b37e45d-827a-4ff9-d720-b1e941462939"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,7 +659,7 @@
         "id": "B28rZhh_XYet",
         "outputId": "f85e211d-9e6a-4392-a32d-6cee4102a2af"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -959,13 +961,12 @@
         "        tokens[i] = tokens[i].lower()\n",
         "\n",
         "    all_reviews += \" \".join(tokens)+\" \"\n",
-        "    negative_reviews  += \" \".join(tokens)+\" \"\n",
-        ""
+        "    negative_reviews  += \" \".join(tokens)+\" \"\n"
       ],
       "metadata": {
         "id": "JiyuBYJRYSz5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -980,7 +981,7 @@
         "id": "96E5a-8zY3YZ",
         "outputId": "13635f24-1bb4-4090-8cd8-c1c538f51694"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1005,7 +1006,7 @@
       "metadata": {
         "id": "XU93TuHdYTj6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1030,7 +1031,7 @@
         "id": "Euwx0EhCYe3S",
         "outputId": "4d6a091c-37ad-44db-86a0-d37b06fa6ef0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1088,7 +1089,7 @@
         "id": "leVfenyJZFaG",
         "outputId": "77249cc8-9596-423b-c596-f7ddde646481"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1117,7 +1118,7 @@
         "id": "lQ3d2gRoaboY",
         "outputId": "cbf28749-7dc1-4ea8-aa50-97dd24a25a9a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1146,7 +1147,7 @@
         "id": "ZOoLnwrWabKt",
         "outputId": "da7a35c1-84c8-4196-8a30-56fb6d34e47b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1181,7 +1182,7 @@
         "id": "1KzdYO6Ca1wB",
         "outputId": "49cb282f-11ef-4b3f-e896-216dda9fc896"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1424,7 +1425,7 @@
         "id": "u10uFJLIcPc5",
         "outputId": "fec92b50-bdf7-456a-bbae-340db4e56042"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1457,7 +1458,7 @@
         "id": "HsyOMI8WboUD",
         "outputId": "dceeff3e-286a-44fc-c28f-fb1697ede665"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1486,7 +1487,7 @@
         "id": "KF7O_jx1b99V",
         "outputId": "54d9b131-0408-4554-fd98-ae48f38517c0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1559,7 +1560,7 @@
         "id": "uS_NybhbhOHn",
         "outputId": "b5545f55-58b1-456d-cf1e-3cdf68b9fa02"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1856,7 +1857,7 @@
         "id": "Ek8JwKFhdLH_",
         "outputId": "d20564c7-0c5a-4757-a75f-f5d2fa008051"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2163,7 +2164,7 @@
         "id": "zokpfodqhFtp",
         "outputId": "ec666cec-5300-4bd7-c92d-3c6bd2897b98"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2194,7 +2195,7 @@
         "id": "4uB_BFdRi3Ep",
         "outputId": "0f6dfb98-fefa-4a1a-c26f-9ec69d5671f5"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2733,7 +2734,7 @@
         "id": "fT7F_rEUkQr8",
         "outputId": "68b6158c-1800-4e1a-86d2-b6b351f0c85c"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3261,7 +3262,7 @@
         "id": "-YxDyIh8x-8X",
         "outputId": "5d8e595f-3a0c-453e-8c2c-ecc08922b1b2"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3784,7 +3785,7 @@
         "id": "pTEVcYKCyJee",
         "outputId": "961b3f4c-f5ec-4de0-d5bf-81acf763b246"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3833,7 +3834,7 @@
       "metadata": {
         "id": "Gv4G3Q3tXbYA"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3853,7 +3854,7 @@
         "id": "ZvyRg4k5k-2x",
         "outputId": "83c3ee03-01a0-4d95-afdb-009c080e3f99"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3878,7 +3879,7 @@
         "y_pred = dt_classifier.predict(X_test)\n",
         "\n",
         "print('Accuracy:', metrics.accuracy_score(y_test, y_pred))\n",
-        "# print('Precision:', metrics.precision_score(y_test, y_pred))\n",
+        "# print('Precision:z', metrics.precision_score(y_test, y_pred))\n",
         "# print('Recall:', metrics.recall_score(y_test, y_pred))\n",
         "# print('F1 Score:', metrics.f1_score(y_test, y_pred))\n"
       ],
@@ -3889,7 +3890,7 @@
         "id": "XXEnGTfnk_wu",
         "outputId": "a61d80df-32a4-4f90-8078-ca62b6a75260"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3915,7 +3916,7 @@
         "id": "492GQWi1lOkx",
         "outputId": "f119afc8-cf4a-4b94-fd79-edeb38494b81"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3958,8 +3959,248 @@
       "metadata": {
         "id": "mWbzHI37yeq6"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Instead of training a decision tree, lets train a simple fully-connected neural network to do the same task and see if it performs better or worse than the decision tree"
+      ],
+      "metadata": {
+        "id": "kYj6cFmmF0_I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "modelReadDataset.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DjmWkrjkHZtJ",
+        "outputId": "8a728431-bf13-4ce0-b995-6dc18068b314"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4000, 770)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense\n",
+        "\n",
+        "# Assume X_train is your feature matrix and Y_train is your target variable\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X = modelReadDataset.drop('sentiment', axis=1)\n",
+        "\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "le = LabelEncoder()\n",
+        "y = le.fit_transform(modelReadDataset['sentiment'])\n",
+        "\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Define the model\n",
+        "model = Sequential()\n",
+        "\n",
+        "# Add the first hidden layer\n",
+        "model.add(Dense(256, activation='relu', input_shape=(769,)))\n",
+        "\n",
+        "# Add the second hidden layer\n",
+        "model.add(Dense(128, activation='relu'))\n",
+        "\n",
+        "# Add the third hidden layer\n",
+        "model.add(Dense(64, activation='relu'))\n",
+        "\n",
+        "# Add the output layer\n",
+        "model.add(Dense(1, activation='sigmoid'))\n",
+        "\n",
+        "# Compile the model\n",
+        "model.compile(loss='binary_crossentropy',\n",
+        "              optimizer='adam',\n",
+        "              metrics=['accuracy'])\n",
+        "\n",
+        "# Fit the model\n",
+        "model.fit(X_train, Y_train, epochs=10, batch_size=32, verbose=1)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "edzKs8DaFz3X",
+        "outputId": "90f7cf69-edbb-45dd-d0ab-4e124234bd7c"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "100/100 [==============================] - 3s 3ms/step - loss: 0.6138 - accuracy: 0.7328\n",
+            "Epoch 2/10\n",
+            "100/100 [==============================] - 0s 3ms/step - loss: 0.5185 - accuracy: 0.7666\n",
+            "Epoch 3/10\n",
+            "100/100 [==============================] - 0s 3ms/step - loss: 0.4659 - accuracy: 0.7844\n",
+            "Epoch 4/10\n",
+            "100/100 [==============================] - 0s 3ms/step - loss: 0.4291 - accuracy: 0.8025\n",
+            "Epoch 5/10\n",
+            "100/100 [==============================] - 0s 3ms/step - loss: 0.4333 - accuracy: 0.7991\n",
+            "Epoch 6/10\n",
+            "100/100 [==============================] - 1s 6ms/step - loss: 0.4182 - accuracy: 0.8106\n",
+            "Epoch 7/10\n",
+            "100/100 [==============================] - 1s 6ms/step - loss: 0.4223 - accuracy: 0.8047\n",
+            "Epoch 8/10\n",
+            "100/100 [==============================] - 0s 4ms/step - loss: 0.4094 - accuracy: 0.8050\n",
+            "Epoch 9/10\n",
+            "100/100 [==============================] - 0s 3ms/step - loss: 0.4027 - accuracy: 0.8128\n",
+            "Epoch 10/10\n",
+            "100/100 [==============================] - 0s 3ms/step - loss: 0.3874 - accuracy: 0.8238\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7837506ff520>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nCU-rGifIQ4R",
+        "outputId": "1d15841e-87e8-49d0-b231-dc357bfebb5c"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_2\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " dense_8 (Dense)             (None, 256)               197120    \n",
+            "                                                                 \n",
+            " dense_9 (Dense)             (None, 128)               32896     \n",
+            "                                                                 \n",
+            " dense_10 (Dense)            (None, 64)                8256      \n",
+            "                                                                 \n",
+            " dense_11 (Dense)            (None, 1)                 65        \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 238,337\n",
+            "Trainable params: 238,337\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assume that X_test is your new dataset\n",
+        "predictions = model.predict(X_test)\n",
+        "\n",
+        "# Convert probabilities into class labels\n",
+        "class_predictions = ['positive' if x > 0.5 else 'negative' for x in predictions]\n",
+        "\n",
+        "# class_predictions"
+      ],
+      "metadata": {
+        "id": "0ctbKtXrIaz_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "report = classification_report(Y_test, le.fit_transform(class_predictions), target_names=['negative', 'positive'])\n",
+        "print(report)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hbMLlgEXIyXZ",
+        "outputId": "ce18cd7b-1f52-4c00-e414-6f631d94a6fb"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "    negative       0.76      0.88      0.82       422\n",
+            "    positive       0.84      0.70      0.76       378\n",
+            "\n",
+            "    accuracy                           0.79       800\n",
+            "   macro avg       0.80      0.79      0.79       800\n",
+            "weighted avg       0.80      0.79      0.79       800\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn import metrics\n",
+        "\n",
+        "print('Accuracy:', metrics.accuracy_score(Y_test, le.fit_transform(class_predictions)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fh_Xz08fJKoo",
+        "outputId": "4be158dd-d3e9-491e-80c5-1939c203e7f4"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.79375\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3998,7 +4239,7 @@
         "id": "9spifuhVzbtU",
         "outputId": "88fbf392-e797-47b3-f1f7-32f7a156c2df"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4060,7 +4301,7 @@
         "id": "C4D3igL4wqN7",
         "outputId": "b899fa7d-eacb-4f09-fd50-1aa55d5c6594"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4451,7 +4692,7 @@
         "id": "m64GC09l1Knv",
         "outputId": "277a95c8-9a80-46e5-a30d-710392b1f78b"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5187,7 +5428,7 @@
         "id": "HRlzjE6L11ZE",
         "outputId": "681ee600-ec9a-4334-ab2c-d575bad3527b"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5213,7 +5454,7 @@
         "id": "u3kspIGW3swv",
         "outputId": "6e53df48-914a-4852-af59-c6bc9fbf3449"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
