--- a/Week03/ClassifierForColorPurple_7282023.ipynb
+++ b/Week03/ClassifierForColorPurple_7282023.ipynb
@@ -1582,7 +1582,7 @@
         "id": "u3SrwtGGzP3n",
         "outputId": "a85f409a-bb2f-49bc-d452-3b41a1569e27"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1594,7 +1594,32 @@
             "██\n",
             "18:49:51.868: _min_rows param, The dataset size is too small to split for min_rows=100.0: must have at least 200.0 (weighted) rows, but have only 145.0.\n",
             "\n",
-            "████████"
+            "█████████████████████████████████████████████████████████████| (done) 100%\n",
+            "model_id                                                      auc    logloss     aucpr    mean_per_class_error      rmse        mse\n",
+            "GBM_5_AutoML_1_20230728_184942                           0.955843   0.242975  0.965635               0.0760373  0.252995  0.0640065\n",
+            "XRT_1_AutoML_1_20230728_184942                           0.954987   0.288019  0.967256               0.070137   0.284895  0.0811652\n",
+            "DRF_1_AutoML_1_20230728_184942                           0.951656   0.487296  0.962877               0.055196   0.259147  0.067157\n",
+            "StackedEnsemble_BestOfFamily_1_AutoML_1_20230728_184942  0.951085   0.262835  0.965749               0.0698515  0.254744  0.0648943\n",
+            "StackedEnsemble_AllModels_1_AutoML_1_20230728_184942     0.949182   0.28289   0.964349               0.0698515  0.264672  0.070051\n",
+            "GBM_grid_1_AutoML_1_20230728_184942_model_2              0.945565   0.256766  0.953628               0.0684241  0.256215  0.0656464\n",
+            "GBM_4_AutoML_1_20230728_184942                           0.939475   0.292328  0.940953               0.0619528  0.273344  0.0747167\n",
+            "GBM_3_AutoML_1_20230728_184942                           0.938523   0.299955  0.944843               0.0830796  0.28066   0.0787699\n",
+            "GBM_2_AutoML_1_20230728_184942                           0.937571   0.304202  0.94028                0.0827941  0.282078  0.0795678\n",
+            "GBM_grid_1_AutoML_1_20230728_184942_model_3              0.929577   0.353707  0.929809               0.0892653  0.316886  0.100417\n",
+            "GBM_grid_1_AutoML_1_20230728_184942_model_1              0.915112   0.374406  0.916656               0.116863   0.333874  0.111472\n",
+            "GLM_1_AutoML_1_20230728_184942                           0.886182   0.433356  0.863375               0.143034   0.354471  0.12565\n",
+            "GBM_grid_1_AutoML_1_20230728_184942_model_4              0.885611   0.441929  0.888543               0.197373   0.375324  0.140868\n",
+            "XGBoost_grid_1_AutoML_1_20230728_184942_model_2          0.881804   0.424508  0.823177               0.157975   0.363313  0.131996\n",
+            "XGBoost_3_AutoML_1_20230728_184942                       0.878378   0.442826  0.809249               0.157975   0.369732  0.136702\n",
+            "XGBoost_grid_1_AutoML_1_20230728_184942_model_3          0.87619    0.443864  0.828372               0.171203   0.372296  0.138604\n",
+            "XGBoost_2_AutoML_1_20230728_184942                       0.862295   0.45794   0.825293               0.186715   0.385212  0.148388\n",
+            "XGBoost_grid_1_AutoML_1_20230728_184942_model_1          0.856585   0.471211  0.809982               0.192615   0.389749  0.151905\n",
+            "XGBoost_grid_1_AutoML_1_20230728_184942_model_4          0.83051    0.499991  0.776967               0.231443   0.405324  0.164287\n",
+            "XGBoost_1_AutoML_1_20230728_184942                       0.488961   0.693135  0.483541               0.5        0.499994  0.249994\n",
+            "XGBoost_grid_1_AutoML_1_20230728_184942_model_6          0.488961   0.69371   0.483541               0.5        0.500281  0.250281\n",
+            "XGBoost_grid_1_AutoML_1_20230728_184942_model_5          0.488961   0.693386  0.483541               0.5        0.50012   0.25012\n",
+            "[22 rows x 7 columns]\n",
+            "\n"
           ]
         }
       ]
