--- a/Week03/ClassifierForColorPurple_7282023.ipynb
+++ b/Week03/ClassifierForColorPurple_7282023.ipynb
@@ -1573,6 +1573,7 @@
         "# View the AutoML Leaderboard\n",
         "lb = aml.leaderboard\n",
         "print(lb.head(rows=lb.nrows))\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -1620,6 +1621,36 @@
             "XGBoost_grid_1_AutoML_1_20230728_184942_model_5          0.488961   0.693386  0.483541               0.5        0.50012   0.25012\n",
             "[22 rows x 7 columns]\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Fetch the model and save it\n",
+        "# Get leader model\n",
+        "leader_model = aml.leader\n",
+        "\n",
+        "# Save the model\n",
+        "model_path = h2o.save_model(model=leader_model, path=\"/content/\", force=True)\n",
+        "\n",
+        "print(f\"Model saved to: {model_path}\")"
+      ],
+      "metadata": {
+        "id": "nXo9TmPE2Sh3",
+        "outputId": "68f9f840-1b53-4336-b3cd-e70cd5c63e82",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model saved to: /content/GBM_5_AutoML_1_20230728_184942\n"
           ]
         }
       ]
