--- a/Week03/MaskData/MaskClassifierInference_TeachableMachine.ipynb
+++ b/Week03/MaskData/MaskClassifierInference_TeachableMachine.ipynb
@@ -18,6 +18,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Build an inference script to run the Keras mask classifier built in Teachable Machine"
+      ],
+      "metadata": {
+        "id": "xjwjVwTm_etm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
@@ -435,10 +444,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
         "# Build a streamlit app to expose the trained image based classification model"
       ],
+      "metadata": {
+        "id": "W6FlMKQJ_bjX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "metadata": {
         "id": "2MG-bZLV8QTW"
       },
